# tmux-manager

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py
tests/functional/: test_local_flow.py  test_remote_flow.py
tests/unit/: test_local.py  test_manager.py  test_remote.py
tmux_manager/: __init__.py  _local.py  _remote.py  manager.py
